[project]
name = "app"
version = "0.1"
requires-python = ">=3.10"

authors = [
    { name = "dispronesson", email = "dispronesson@mail.ru" },
]
dependencies = [
    "jupyter>=1.1.1",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "onnxruntime>=1.24.3",
    "pesq>=0.0.4",
    "sounddevice>=0.5.5",
    "speechmos>=0.0.1.1",
]


[tool.ruff]
line-length = 88
target-version = "py313"
indent-width = 4

exclude = [
    ".venv/",
]

select = [
    "E",
    "F",
    "I",
    "B",
]

ignore = [
    "E203",
    "E501",
]
